cahnge of homepage

--- a/lang/main-eu.json
+++ b/lang/main-eu.json
@@ -1004,8 +1004,8 @@
         "getHelp": "Lortu laguntza",
         "go": "JOAN",
         "goSmall": "JOAN",
-        "headerSubtitle": "Secure and high quality meetings",
-        "headerTitle": "Jitsi Meet",
+        "headerSubtitle": "🇷🇼 Connect, collaborate, and innovate across Rwanda",
+        "headerTitle": "Manifest Rwanda Live",
         "info": "Informazioa",
         "jitsiOnMobile": "Jitsi eramangarrian – deskargatu gure aplikazioak eta hasi bilerak edonondik",
         "join": "SORTU / SARTU",
