--- a/lang/main-te.json
+++ b/lang/main-te.json
@@ -972,8 +972,8 @@
         "getHelp": "సహాయం పొందండి",
         "go": "వెళ్ళు",
         "goSmall": "వెళ్ళు",
-        "headerSubtitle": "Secure and high quality meetings",
-        "headerTitle": "జిత్సి మీట్",
+        "headerSubtitle": "🇷🇼 Connect, collaborate, and innovate across Rwanda",
+        "headerTitle": "Manifest Rwanda Live",
         "info": "డయలింగ్ సమాచారం",
         "jitsiOnMobile": "Jitsi on mobile – download our apps and start a meeting from anywhere",
         "join": "CREATE / JOIN",
