--- a/lang/main.json
+++ b/lang/main.json
@@ -1618,7 +1618,7 @@
         "getHelp": "Get help",
         "go": "GO",
         "goSmall": "GO",
-        "headerSubtitle": "🇷🇼 Secure, high-quality meetings for Rwanda and beyond",
+        "headerSubtitle": "🇷🇼 Connect, collaborate, and innovate across Rwanda",
         "headerTitle": "Manifest Rwanda Live",
         "info": "Dial-in info",
         "jitsiOnMobile": "Manifest Rwanda on mobile – download our apps and start a meeting from anywhere in Rwanda",
